--- a/styles/basics/base.css
+++ b/styles/basics/base.css
@@ -1,3 +1,28 @@
-.hidden{
-   display: none;
+body{
+   background-color: rgb(59, 55, 55);
+}
+
+.header{
+   display: flex;
+   background-color: rgb(34, 30, 30);
+   color: rgb(196, 184, 184);
+   border-radius: 20px;
+   justify-content: space-between;
+}
+.color-btn {
+  position: relative;
+  display: inline-block;
+  background: #f0f0f0;
+
+}
+.color {
+   
+    position: absolute;
+  inset: 0;
+  opacity: 0;
+  cursor: pointer;
+}
+
+.download{
+   display: inline-block;
 }
