--- a/styles/components/btn.css
+++ b/styles/components/btn.css
@@ -6,8 +6,8 @@
     cursor: pointer;
     font-size: 16px;
 
-    background-color: #a7f1e5; 
-    color: #ffffff; 
+    background-color: #5f6d6b; 
+    color: #252525; 
 
     transition: background-color 0.3s ease, transform 0.1s ease; 
 }
