--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -1,7 +1,76 @@
+
 .gallery{
    display: grid;
    justify-content: center;
    grid-template-columns:1fr 1fr;
    gap: 2em;
-   
+}
+
+.editor{
+   display: flex;
+   flex-direction: column;
+   justify-content: center;
+   align-items: center;
+   gap: 2em;
+}
+
+.canvas-container{
+   width: 60vw;
+   max-width: 600px;
+   max-height: 600px;
+   height: auto;
+   object-fit: cover;
+   margin: 1em;
+   border-radius: 20px;
+}
+
+.meme-canvas{
+   width: 100%;
+   height: auto;
+   display: block;
+   border-radius: 20px;
+}
+
+.operations{
+   display: grid;
+   grid-template-columns: 1fr 1fr 1fr;
+   grid-template-rows: 1fr 1fr 1fr;
+place-items: center;
+}
+#text-input{
+grid-column: 1 / 4;
+grid-row: 1;
+border-radius: 1em;
+width: 25vw;
+height: 6vh;
+
+}
+.color-btn{
+   grid-column: 1;
+   grid-row: 2;
+}
+
+.incress{
+   grid-column: 2;
+   grid-row: 2;
+}
+
+.decrease{
+   grid-column: 3;
+   grid-row: 2;
+}
+
+.add-line{
+   grid-column: 1;
+   grid-row: 3;
+}
+
+.switch-line{
+   grid-column: 2;
+   grid-row: 3;
+}
+
+.download{
+   grid-column: 3;
+   grid-row: 3;
 }
