--- a/styles/components/btn.css
+++ b/styles/components/btn.css
@@ -1,6 +1,6 @@
 .btn {
     padding: 0.7em 1em;
-    margin: 1em;
+    /* margin: 1em; */
     border: none;
     border-radius: 8px;
     cursor: pointer;
