--- a/styles/basics/base.css
+++ b/styles/basics/base.css
@@ -2,6 +2,10 @@ body{
    background-color: rgb(59, 55, 55);
    margin: 0;
 padding: 0;
+background-image: url('/meme-imgs/backGround.png');
+background-size: cover;      
+  background-repeat: no-repeat; 
+  background-position: center;  
 }
 .footer{
 text-align: center; 
@@ -20,7 +24,7 @@ left:0;
    align-items: center;
    justify-content: space-between;
 
-   background-color: rgb(133, 121, 121);
+   background: linear-gradient(0.25turn, #6b7885, #2b9ebb);
    color: rgb(196, 184, 184);
 
    padding: 1em 2em;
@@ -28,7 +32,7 @@ left:0;
 
    & button{
       background-color: rgb(133, 121, 121);
-      padding: 1em;
+      padding: 1.2vw;
       border: none;
       border-radius: 20px;
       font-size: 1.1em;
@@ -37,6 +41,10 @@ left:0;
       background-color: rgb(109, 98, 98);
       cursor: pointer;
    }
+}
+.logo{
+   min-width: 150px;
+   width: 20vw;
 }
 .color-btn {
   position: relative;
