--- a/styles/basics/layout.css
+++ b/styles/basics/layout.css
@@ -5,8 +5,10 @@
     display: grid;
     justify-content: center;
     grid-template-columns: 1fr 1fr;
-    gap: 2em;
-    padding-inline: 20px;
+    gap: 1em;
+    padding-inline: 2em;
+    min-height: 59vh;
+
 }
 
 
@@ -16,126 +18,10 @@
     justify-content: center;
     align-items: center;
     gap: 1em;
+    min-height: 80vh;
     
 }
 
-.canvas-container {
-    width: 40vw;
-    height: auto;
-    min-width: 250px;
-    min-height: 200px;
-    max-width: 470px;
-    max-height: 470px;
-
-    object-fit: cover;
-    margin: 1em;
-    border-radius: 20px;
-}
-
-.meme-canvas {
-    width: 100%;
-    height: auto;
-    display: block;
-    border-radius: 20px;
-}
-
-.operations {
-    display: flex;
-    flex-direction: column;
-
-    place-items: center;
-    place-content: center;
-
-    background: linear-gradient(0.5turn, #4182c4, #232142);
-    padding: 1em 0.5em;
-    border-radius: 5px;
-
-
-    width: 40vw;
-    height: auto;
-    min-width: 250px;
-    min-height: 200px;
-    max-width: 600px;
-    max-height: 600px;
-}
-#text-input {
-  margin-bottom: 0.5em;
-    border-radius: 1em;
-    background-color: #d0d8da;
-    height: 4vh;
-    width: 70%;
-    padding-inline: 1em;
-}
-.add-line {
-}
-.delete-line {
-}
-
-.switch-line {
-    grid-column: 1;
-    grid-row: 2;
-}
-
-.font-modifier {
-    grid-column: 1 / -1;
-    grid-row: 3;
-    display: grid;
-    padding: 0.5em;
-    margin-bottom: 1em;
-    background: linear-gradient(0.5turn, #758183, #5e58b9);
-    border-radius: 2em;
-}
-.fa-align-center {
-   grid-column: 2/3;
-   grid-row: 1;
-}
-.fa-align-left {
-   grid-column: 1/1;
-   grid-row: 1;
-
-}
-.fa-align-right {
-   grid-column: 3/4;
-   grid-row: 1;
-
-}
-
-
-
-.increase {
-    grid-column: 3;
-    grid-row: 2;
-}
-
-.decrease {
-    grid-column: 1;
-    grid-row: 2;
-}
-.color-btn {
-    grid-column: 2;
-    grid-row: 2;
-}
-#fontSelect{
-   grid-column: 1 / 4;
-   grid-row: 3;
-   margin-bottom: 1em;
-      background-color: #50a4b1; 
-
-}
-.full-line {
-    grid-column: 1 / -1;
-}
-
-.lower-modifier{
-   display: flex;
-justify-items: center;
-}
-.download {
-    grid-column: 4;
-    grid-row: 2;
-    background-color: #6bcea0; 
-
-}
 
 .rights {
     margin-bottom: 3em;
