--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,12 @@
 /* COMPONENTS */
 @import url('components/btn.css');
 @import url('components/gallery-img.css');
+@import url('components/header.css');
+@import url('components/footer.css');
+@import url('components/search-meme.css');
+@import url('components/canvas.css');
+@import url('components/operations.css');
+@import url('components/keywords.css');
 
 
 /* MQ */
