--- a/styles/components/search-meme.css
+++ b/styles/components/search-meme.css
@@ -9,8 +9,8 @@
    background-color: rgb(59, 56, 56); 
 }
 .search-meme-input{
-   height: 3em;
-   width: 7em;
+   height: 2em;
+   width: 10em;
    border-radius: 1em;
    background-color: #d0d8da;
    align-self: center;
@@ -38,7 +38,7 @@
     border: none;
     border-radius: 8px;
     cursor: pointer;
-    font-size: 1.5em;
+    font-size: 1.25em;
     height: fit-content;
     padding: 0.2em;
     color: #252525; 
@@ -47,12 +47,10 @@
 
 }
 .keyword-reset:hover{
-   background-color: #9c0a0a; 
+   background-color: #d31313; 
    transform: translateY(-2px); 
 }
 .keyword-reset:active {
-   background-color: #7a0808; 
+   background-color: #bb0f0f; 
     transform: translateY(0); 
-}
-.keywords{
 }
